@@ -2,6 +2,7 @@ Changelog for nautilus-image-manipulator
 
 ================================
 1.3 - 201X-XX-XX (rYYY)
+  * Add dl.free.fr as upload destination (LP #1098695)
   * Better error handling when the upload site could not be parsed successfully.
   * "Port" to GTK+ 3 (actually, just updated the UI file to be able to open
     with Glade for GTK+ 3)
